--- a/Image_captioning.html
+++ b/Image_captioning.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+<!-- I have added a small change -->
+
+
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -48,4 +53,3 @@
 </body>
 <script src="script.js"></script>
 </html>
-    
